library-management-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: library-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: library.local
      http:
        paths:
          - path: /ui
            pathType: Prefix
            backend:
              service:
                name: library-management
                port:
                  number: 80
          - path: /books
            pathType: Prefix
            backend:
              service:
                name: book-service
                port:
                  number: 80
          - path: /borrows
            pathType: Prefix
            backend:
              service:
                name: borrow-service
                port:
                  number: 80
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 80
